Bug 152425 - Roundtrip of a DOCX with List 5 paragraph style converts it to List Number style
Summary: Roundtrip of a DOCX with List 5 paragraph style converts it to List Number style
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.2.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks:
 
Reported: 2022-12-08 16:04 UTC by Mike Kaganski
Modified: 2023-04-04 06:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A DOCX with List Number and List 5 styles (16.46 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-12-08 16:04 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2022-12-08 16:04:28 UTC
Created attachment 184051 [details]
A DOCX with List Number and List 5 styles

Attachment (created in Word 2016) has two paragraphs, first assigned "List Number" paragraph style, second "List 5" style.

Saving (as DOCX) and reopening in Writer converts the second paragraph to List Number.

This is a regression from commit 78284714b73a8307174c596295894e8f3951e09a (tdf#76817: fix missing heading styles assigned to outline levels in ooxml, 2016-02-04).
Comment 1 Commit Notification 2022-12-09 14:26:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/960207c72aedaf8569b880a7c000c10d0baabb70

Related: tdf#152425 Use ww::sti enum instead of respective number literals

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-01-12 04:34:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ac0a27c7cb0e8d09e701aaf150414d136e58310

tdf#152425 Fix order in stiName array

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-01-12 04:34:37 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/319e2e0cbc6a1d25abd01fb27d6250cee825c072

tdf#152425 Make Word names unique, and use them for style ids generation

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-01-12 04:34:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13d30067370353ae5a43c2f2cbd69bb824363815

tdf#152425 Synchronize import and export style names mapping

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-13 05:17:06 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20adf4683c7d38ad41edac586b897757393c8029

tdf#152425 related: don't generate style ids in DocxAttributeOutput::Redline

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.