tdf#152425 Fix order in stiName array

Since their introduction in commit 552d05f57175ecdd0736dc257319bc30aa88d696
(INTEGRATION: CWS portlaoisefilterteam16 (1.1.2); FILE ADDED, 2003-12-09)
and commit 9ba054a180fe1fcd410a2887351c2ff1fcb30847 (INTEGRATION: CWS
portlaoisefilterteam16 (1.1.2); FILE ADDED, 2003-12-09), the enum sti
and GetStiNames were accidentally not matching each other.

commit 78284714b73a8307174c596295894e8f3951e09a (tdf#76817: fix missing
heading styles assigned to outline levels in ooxml, 2016-02-04) introduced
a use of ww::GetEnglishNameFromSti, and since then, the unmatched elements
started to get written to DOCX styles with wrong names, like

    <w:style w:type="paragraph" w:styleId="List5">
        <w:name w:val="List Number"/>

instead of original name "List 5".

Change-Id: I8888b3f117e0b7f57c2dbb90565475d529416c60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143828
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145885
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>